--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "async": "*",
     "express": "*",
     "showdown": "*",
-    "jade": "*"
+    "jade": "*",
+    "gith": "*"
   },
   "devDependencies": {
     "ejs": "*"
